# solana-dev-onboarding-rs

./: CONTRIBUTING.md  README.md
.github/workflows/: test_backend_demos.yml  validate_urls.yml
chapters/: 01_intro.md  02_dev_env.md  03_anchor.md  04_pda.md  04_program_derived_addresses.md  04_spl_tokens.md  05_events.md  05_pda.md  06_events.md  06_frontend.md  07_additional_resources.md  07_frontend.md  07_sharpening_your_axe.md  07_token_extensions.md  07_transfer_extensions.md  07_transfer_hooks.md  08_additional_resources.md  08_security.md  08_token_extensions.md  08_transfer_hooks.md  09_mobile.md  09_security.md  09_transfer_hooks.md  10_additional_resources.md  10_mobile.md  10_security.md  11_additional_resources.md  11_mobile.md  12_additional_resources.md  1_intro.md  2_dev_env.md  2_envs.md  3_anchor.md  4_frontend.md  6_sharpening_your_axes.md  6_transfer_hooks.md
demos/: .gitignore  README.md
demos/01_hello_world/: Cargo.toml  README.md
demos/02_anchor_cpi/: README.md
demos/03_anchor_pda/: README.md
demos/04_sol_vs_sol/: README.md
demos/05_rust/: README.md
demos/07_logs_events_txs/: README.md
demos/10_payment/: README.md
demos/11_wallets_to_account/: README.md
demos/12_pda/: README.md
demos/13_multicall/: README.md
demos/backend/05_transfer_hooks_extension/programs/transfer_hook_extension/: Cargo.toml
demos/backend/05_transfer_hooks_extension/programs/transfer_hook_extension/src/: lib.rs
demos/backend/05_transfer_hooks_extension/programs/transfer_hook_extension/src/instructions/: metalist.rs
demos/backend/06_transfer_hooks_extension/programs/transfer_hook_extension/: Cargo.toml
demos/backend/06_transfer_hooks_extension/programs/transfer_hook_extension/src/instructions/: transfer_hook.rs
demos/backend/09_transfer_hook_nft/programs/epplex-program/: Cargo.toml
demos/backend/09_transfer_hook_nft/programs/epplex-program/src/: errors.rs  lib.rs  state.rs
demos/backend/09_transfer_hook_nft/programs/epplex-program/src/context/: burn_membership.rs  manage_rule.rs  manage_time.rs  mint_membership_nft.rs
demos/backend/09_transfer_hook_nft/programs/epplex-program/src/ephemeral_context/: burn_membership.rs  manage_rule.rs  mint_membership_nft.rs  mod.rs
demos/backend/09_transfer_hook_nft/programs/nft/: Cargo.toml
demos/backend/09_transfer_hook_nft/programs/nft/src/: errors.rs  lib.rs
demos/backend/09_transfer_hook_nft/programs/nft/src/context/: burn_membership.rs  manage_rule.rs  manage_time.rs  mint_membership_nft.rs  mod.rs
demos/backend/09_transfer_hook_nft/programs/nft/src/instructions/: burn_membership.rs  manage_time.rs  mint_membership_nft.rs  mod.rs  rules.rs  time.rs
demos/backend/09_transfer_hook_nft/programs/nft/src/state/: global.rs
demos/neodyme_layout/programs/example/: Cargo.toml
demos/neodyme_layout/programs/example/src/: lib.rs
demos/neodyme_layout/programs/example/src/state/: global.rs
docs/: CONTRIBUTING.md
(+326 files in other folders)
