[package]
name = "neodyme_scafold"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
name = "neodyme_scafold"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"]}
