[package]
name = "nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
name = "nft"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = { version = "0.29.0" }
spl-token-2022 = {version = "1.0.0", features = ["no-entrypoint"] }
solana-program = "=1.17"
spl-token-metadata-interface = "0.2.0"
spl-pod = "0.1.0"
ahash = "=0.8.6"
